Organizing project packages, adding a few improvments to the UI, implementing player executable change, implementing different behaviours to different OS when playing a song